--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -11,24 +11,10 @@
         </p>
         {% for post in page_obj %}
         <article>          
-          <ul>
-            <li>
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li>
-              Дата публикации: {{ post.created|date:"d E Y"}}
-            </li>
-          </ul>
-          <p>
-          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-            <img class="card-img my-2" src="{{ im.url }}">
-          {% endthumbnail %}
-            {{ post.text }}
-          </p>          
+          {% include 'includes/post_card.html' %}
         </article>
         {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
-        <!-- под последним постом нет линии -->
-        {% include 'posts/includes/paginator.html' %}
+        {% include 'includes/paginator.html' %}
       </div>
 {% endblock %}
