--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -6,31 +6,17 @@
 {% endblock %}
 {% block content %}
       <div class="container py-5">
-        {% include 'posts/includes/switcher.html' with index=True %}
+        {% include 'includes/switcher.html' with index=True %}
         <h1>Последние обновления на сайте</h1>
         {% cache 20 index_page page_obj.number %}
         {% for post in page_obj %}
         <article>
-          <ul>
-            <li>
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li>
-              Дата публикации: {{ post.created|date:"d E Y"}}
-            </li>
-          </ul>
-          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-            <img class="card-img my-2" src="{{ im.url }}">
-          {% endthumbnail %}
-          <p>{{ post.text }}</p>
-            {% if post.group %}
-            <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-            {% endif %}          
+          {% include 'includes/post_card.html' %}
+          {% include 'includes/group.html' %}
         </article>
         {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
-        <!-- под последним постом нет линии -->
-        {% include 'posts/includes/paginator.html' %}
+        {% include 'includes/paginator.html' %}
       </div>
 {% endcache %}
 {% endblock %}
